# my-login-app-api-jwt-backend-rust

./: .env.mysql.example  .env.postgres.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  postgres.docker-compose.yml
crates/login_orm/: Cargo.toml  build.rs
crates/login_orm/migrations/20160815133237_create_posts/: up.sql
crates/login_orm/migrations/20240918223612_create_user/: up.sql
crates/login_orm/migrations/20240918223900_create_role/: up.sql
crates/login_orm/migrations/20240918224153_create_privileges/: up.sql
crates/login_orm/queries_example/: my_login_java.sql  my_login_typescript.sql
crates/login_orm/src/: lib.rs  models.rs  schema.rs
src/: auth.rs  config.rs  main.rs  schema.rs
src/middlewares/: auth_middleware.rs
src/models/: models.rs
src/services/: user_service.rs
src/utils/: token_utils.rs
