[package]
name = "my_login_app_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-identity = "0.7.1"
actix-cors = "0.7.0"
actix-session = "0.10.0"
env_logger = "0.11.5"
jsonwebtoken = "8"
bcrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
